<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fragment_information_ivBack"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_marginStart="@dimen/dp15"
            android:padding="@dimen/dp4"
            android:src="@drawable/ic_back"
            android:tint="@color/black" />

        <TextView
            style="@style/TextStyleMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="20dp"
            android:text="@string/order_information" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    style="@style/ImageViewStyleOrder"
                    android:src="@drawable/ic_ship" />

                <TextView
                    style="@style/TextStyleItemOrder"
                    android:layout_weight="1"
                    android:text="@string/information_delivery" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:checkedButton="@id/fragment_information_rbRestaurant">

                <RadioButton
                    android:id="@+id/fragment_information_rbRestaurant"
                    style="@style/TextStyleItemOrderChild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information_at_restaurant" />

                <RadioButton
                    android:id="@+id/fragment_information_rbShipping"
                    style="@style/TextStyleItemOrderChild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information_shipping"
                    android:textSize="@dimen/dp15" />
            </RadioGroup>

            <TextView
                android:id="@+id/fragment_information_tvEnableShipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp13"
                android:gravity="center"
                android:text="@string/information_enable_shipping"
                android:textColor="@color/grey" />

            <LinearLayout
                android:id="@+id/fragment_information_llShipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_information_rvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/fragment_information_ivAddShip"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:padding="@dimen/dp10"
                    android:src="@drawable/ic_plus"
                    android:tint="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    style="@style/ImageViewStyleOrder"
                    android:src="@drawable/ic_dollar" />

                <TextView
                    style="@style/TextStyleItemOrder"
                    android:layout_weight="1"
                    android:text="@string/information_payment_method" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:checkedButton="@id/fragment_information_rbDirect">

                <RadioButton
                    android:id="@+id/fragment_information_rbDirect"
                    style="@style/TextStyleItemOrderChild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information_direct_payment" />

                <RadioButton
                    android:id="@+id/fragment_information_rbOnline"
                    style="@style/TextStyleItemOrderChild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information_online_payment" />
            </RadioGroup>

            <TextView
                android:id="@+id/fragment_information_tvEnableOnline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp13"
                android:gravity="center"
                android:text="@string/information_enable_online_payment"
                android:textColor="@color/grey" />

            <LinearLayout
                android:id="@+id/fragment_information_llOnline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_information_rvCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/fragment_information_ivAddPayment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:padding="@dimen/dp10"
                    android:src="@drawable/ic_plus"
                    android:tint="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    style="@style/ImageViewStyleOrder"
                    android:src="@drawable/ic_list" />

                <TextView
                    style="@style/TextStyleItemOrder"
                    android:layout_weight="1"
                    android:text="@string/information_selected_foods" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_information_rvFoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    style="@style/ImageViewStyleOrder"
                    android:src="@drawable/ic_comment_alt" />

                <TextView
                    style="@style/TextStyleItemOrder"
                    android:layout_weight="1"
                    android:text="@string/information_message" />
            </LinearLayout>

            <EditText
                android:id="@+id/fragment_information_etMessage"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp10"
                android:layout_marginVertical="@dimen/dp5"
                android:background="@drawable/background_edit_text"
                android:hint="@string/information_content_message"
                android:minHeight="@dimen/dp100"
                android:paddingHorizontal="@dimen/dp5"
                android:paddingVertical="@dimen/dp10"
                android:textColorHint="@color/grey_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="@dimen/dp16">

        <TextView
            style="@style/TextStyleItemOrderChild"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_total_amount" />

        <TextView
            android:id="@+id/fragment_information_tvTotal"
            style="@style/TextStyleOrderTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_index_default" />

        <TextView
            style="@style/TextStyleOrderTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp5"
            android:text="@string/order_vnd" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_information_btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_order"
        android:text="@string/order_confirm" />
</LinearLayout>