<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fragment_success_imageView"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:padding="@dimen/dp20" />

        <TextView
            style="@style/TextStyleItemOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/complete_order_success" />

        <TextView
            style="@style/TextStyleItemOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/complete_thanks" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_complete_btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_order"
        android:text="@string/order_confirm"
        android:textColor="@color/black" />
</LinearLayout>