<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp5"
    android:paddingVertical="@dimen/dp10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fragment_change_password_ivBack"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_marginStart="@dimen/dp15"
            android:padding="@dimen/dp4"
            android:src="@drawable/ic_back"
            android:tint="@color/black" />

        <TextView
            style="@style/TextStylePersonal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="20dp"
            android:text="@string/personal_change_password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/TextStylePersonalChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp8"
            android:layout_marginVertical="@dimen/dp7"
            android:text="@string/change_password_password_recent" />

        <EditText
            android:id="@+id/fragment_change_password_etPasswordRecent"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp8"
            android:layout_marginVertical="@dimen/dp7"
            android:background="@drawable/background_edit_text"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/dp5"
            android:paddingVertical="@dimen/dp8" />

        <TextView
            style="@style/TextStylePersonalChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp8"
            android:layout_marginVertical="@dimen/dp7"
            android:text="@string/change_password_new_password" />

        <EditText
            android:id="@+id/fragment_change_password_etNewPassword"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp8"
            android:layout_marginVertical="@dimen/dp7"
            android:background="@drawable/background_edit_text"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/dp5"
            android:paddingVertical="@dimen/dp8" />

        <TextView
            android:id="@+id/fragment_change_password_tvCheckPassword"
            style="@style/TextStyleLoginError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:padding="3dp"
            android:text="@string/sign_in_password_invalid"
            android:visibility="gone" />

        <TextView
            style="@style/TextStylePersonalChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp8"
            android:layout_marginVertical="@dimen/dp7"
            android:text="@string/change_password_confirm_password" />

        <EditText
            android:id="@+id/fragment_change_password_etConfirmPassword"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp8"
            android:layout_marginVertical="@dimen/dp7"
            android:background="@drawable/background_edit_text"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/dp5"
            android:paddingVertical="@dimen/dp8" />


        <TextView
            android:id="@+id/fragment_change_password_tvNotMatch"
            style="@style/TextStyleLoginError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:padding="3dp"
            android:text="@string/sign_up_not_match"
            android:visibility="gone" />

        <TextView
            android:id="@+id/fragment_change_password_tvNotification"
            style="@style/TextStyleNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp3"
            android:gravity="center" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_change_password_btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/background_button"
        android:text="@string/profile_update" />
</LinearLayout>