<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/grey_background"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fragment_add_card_ivBack"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_marginStart="@dimen/dp15"
            android:padding="@dimen/dp4"
            android:src="@drawable/ic_back"
            android:tint="@color/black" />

        <TextView
            style="@style/TextStylePersonal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="20dp"
            android:text="@string/update_card_add_card" />
    </LinearLayout>

    <TextView
        style="@style/TextStylePersonalChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dp8"
        android:paddingHorizontal="@dimen/dp5"
        android:layout_marginHorizontal="@dimen/dp8"
        android:layout_marginVertical="@dimen/dp7"
        android:text="@string/update_card_bank" />

    <Spinner
        android:id="@+id/fragment_add_card_spinnerBank"
        style="@style/TextStylePersonalChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_button"
        android:layout_marginHorizontal="@dimen/dp8"
        android:layout_marginVertical="@dimen/dp7"
        android:paddingHorizontal="@dimen/dp5"
        android:paddingVertical="@dimen/dp8" />

    <TextView
        style="@style/TextStylePersonalChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp8"
        android:layout_marginVertical="@dimen/dp7"
        android:text="@string/update_card_card_number" />

    <EditText
        android:id="@+id/fragment_add_card_etCardNumber"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp8"
        android:layout_marginVertical="@dimen/dp7"
        android:background="@drawable/background_edit_text"
        android:paddingHorizontal="@dimen/dp5"
        android:paddingVertical="@dimen/dp8" />

    <TextView
        style="@style/TextStylePersonalChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp8"
        android:layout_marginVertical="@dimen/dp7"
        android:text="@string/update_card_full_name" />

    <EditText
        android:id="@+id/fragment_add_card_etFullName"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp8"
        android:layout_marginVertical="@dimen/dp7"
        android:background="@drawable/background_edit_text"
        android:paddingHorizontal="@dimen/dp5"
        android:paddingVertical="@dimen/dp8" />

    <TextView
        android:id="@+id/fragment_add_card_tvNotification"
        style="@style/TextStyleNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp3"
        android:gravity="center" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_add_card_btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/background_button"
        android:text="@string/update_card_submit" />
</LinearLayout>